# can-switch-node

./: CAN_PROTOCOL.md  CMakeLists.txt  PLAN_config_store_and_hub_discovery.md  partitions_ota.csv  platformio.ini  sdkconfig.defaults  sdkconfig.node_min  sdkconfig.node_min_c3
.cursor/: serial_to_log.py
components/esp32-mcp2515/: CMakeLists.txt  mcp2515.cpp
docs/: CAN_OTA.md  WS2812_MECHANICAL_NODE.md
extra_scripts/: pre_upload_erase.py
lib/: lv_conf.h
lib/ESP32-TWAI/: ESP32TWAI.cpp
src/: CMakeLists.txt  main.cpp  main_idf.cpp
src/board/: board_config.h
src/common/: boot_ota_guard.cpp  boot_ota_guard.h  can.cpp  can.h  can_driver.h  can_mcp2515.cpp  can_mcp2515.h  config_store.cpp  config_store.h  input_engine.cpp  input_engine.h  node_ota.cpp  node_ota.h  nvs_store.cpp  nvs_store.h  platform_gpio.cpp  platform_gpio.h  platform_time.cpp  platform_time.h  ws2812_strip.cpp  ws2812_strip.h
src/common/ws2812/: ws2812_effects.cpp  ws2812_effects.h  ws2812_hal.cpp  ws2812_hal.h  ws2812_task.cpp  ws2812_task.h  ws2812_types.cpp  ws2812_types.h
src/ui/: ui_helper.cpp  ui_helper.h
src/ui/audio_mixer/: ui_audio_mixer.h  ui_audio_mixer_helpers.c  ui_audio_mixer_helpers.h
src/ui/audio_mixer/fonts/: ui_font_mos_semibold_16.c
src/ui/audio_mixer/images/: ui_img_btn_1_act_png.c  ui_img_btn_1_inact_png.c  ui_img_indicator_ver_png.c  ui_img_pot_ver_knob_png.c  ui_img_pot_ver_line_png.c
src/ui/audio_mixer/screens/: ui_Audio_Player.c  ui_Audio_Player.h
tools/: can_ota_bench.py  verify_ota_image.py
